--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 </head>
 <body>
 	<div class="content1">
-		<div class="top"></div>
+		<div class="top">
+		</div>
 		<div class="top1">
 		</div>
 		<div class="content1_txt">
