--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
 			<li class="li_1">1.顾客自助点餐，节省服务员</li>
 			<li>&nbsp;&nbsp;时间，提高餐厅点餐效率。</li>
 			<li class="li_2">2.提高餐厅信息化，顾客订单</li>
-			<li class="li_4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;信息一手掌控。</li>
+			<li class="li_4">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;信息一手掌控。</li>
 			<li class="li_3">3.点餐后立即微信支付，杜绝</li>
-			<li class="li_5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;错单。</li>
+			<li class="li_5">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;错单。</li>
 		</div>
 	</div>
 	<div class='content2'>
